# model_check

./: .gitignore
Model/Openvino/: Model_DAD_OpenVINO.mapping  Model_DAD_OpenVINO.xml
Model/Tensorrt_x86/: Model_DAD_TensorRT_INT8.plan
OpenVINO/: main.cpp
OpenVINO/cpp/: openvino_detection.cpp  openvino_detection.h
OpenVINO/test/: CMakeLists.txt  OpenvinoTests.cpp
OpenVINO/test/reports/code_coverage_report/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
OpenVINO/test/reports/code_coverage_report/cpp/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  openvino_detection.cpp.func-sort-c.html  openvino_detection.cpp.func.html  openvino_detection.cpp.gcov.html
OpenVINO/test/reports/unit_test_report/: report.txt
TensorRT/object_oriented/: callback.cpp  main.cpp
Tensorflow/: frame_infer.py  video_infer.py
Tensorflow/DAD_weights_6_11/: saved_model.pb
Tensorflow/DAD_weights_6_11/variables/: variables.index
